# analytics-api

./: README.md  compose.yaml  dockerfile  pyproject.toml
boot/: docker-run.sh
src/: main.py
src/api/: __init__.py
src/api/db/: __init__.py  config.py  session.py
src/api/events/: __init__.py  models.py  routing.py  schemas.py
