[tool.poetry]
name = "fastapi-rest-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.116.1,<0.117.0"
gunicorn = ">=23.0.0,<24.0.0"
timescaledb = ">=0.0.4,<0.0.5"
sqlmodel = ">=0.0.24,<0.0.25"
pydantic = ">=2.11.7,<3.0.0"
sqlalchemy = ">=2.0.42,<3.0.0"
requests = "^2.32.4"
httpx = "^0.28.1"
ruff = "^0.12.7"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"